# methodist-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
docs/: DESIGN.md  OPEN_SOURCE_ANALYSIS.md  RESEARCH_AI_WORKSPACES_MCP_2026-06-15.md  UX_GUIDE.md
docs/superpowers/plans/: 2026-06-15-ux-onboarding-polish.md  2026-06-15-wave1-tkinter-workspace.md  2026-06-16-wave2-document-environment-mcp.md  2026-06-16-wave3-skills-context-streaming.md  code-quality-reviewer-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md
docs/superpowers/specs/: 2026-06-15-methodist-agent-v2-design.md
src/: __init__.py  main.py
src/agents/: adaptation_agent.py  document_specialist.py  pdf_reader.py  utils.py  web_search.py
src/core/: __init__.py  config.py  context_manager.py  context_scout.py  document_environment.py  environment_check.py  event_bus.py  model_router.py  orchestrator.py  sandbox.py  skill_registry.py  skill_validator.py  ui_text.py
src/drivers/: __init__.py  com_driver.py  native_driver.py
src/mcp/: __init__.py  methodist_mcp_server.py
src/mcp_server/: __init__.py  methodist_mcp_server.py
src/methodist_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/windows/: approval_dialog.py  chat_panel.py  file_panel.py  quick_actions.py  tray_app.py  workspace.py
templates/curriculum/: template.docx
templates/presentation/: lecture.pptx
templates/schedule/: grade_sheet.xlsx
tests/: conftest.py  test_approval_dialog.py  test_chat_panel.py  test_cli.py  test_com_driver.py  test_context_manager.py  test_context_scout.py  test_document_environment.py  test_document_specialist.py  test_environment_check.py  test_event_bus.py  test_file_panel.py  test_mcp_server.py  test_model_router.py  test_native_driver.py  test_orchestrator.py  test_quick_actions.py  test_sandbox.py  test_skill_registry.py  test_skill_validator.py  test_ui_text.py  test_workspace.py  test_workspace_smoke.py
(+10 files in other folders)
