[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methodist-agent"
version = "1.0.0"
description = "Windows-first AI agent for education methodists"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Methodist Agent Team"}
]
keywords = ["ai", "agent", "education", "windows", "office", "documents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "annotated-types>=0.7.0",
    "click>=8.0,<8.2",
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.0",
    "lxml>=5.4.0",
    "mcp[cli]>=1.27.2",
    "openai>=1.86.0,<2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "PyMuPDF>=1.25.5",
    "pypdf>=5.6.0",
    "PyPDF2>=3.0.1",
    "pystray>=0.19.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pytesseract>=0.3.13",
    "pywin32>=310; platform_system == 'Windows'",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
methodist-agent = "src.main:app"

[project.urls]
Homepage = "https://github.com/methodist-agent/methodist-agent"
Documentation = "https://methodist-agent.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
